--- a/B0.477-20191-PEC02/B0.477-20191-PEC02-Cluster-enunciado.Rmd
+++ b/B0.477-20191-PEC02/B0.477-20191-PEC02-Cluster-enunciado.Rmd
@@ -1,7 +1,7 @@
 
 ---
 title: "Fundamentos de Data Science: PEC2 - Algoritmos de clustering"
-author: "UOC - Master BI - Business Analytics (Nombre Estudiante)"
+author: "UOC - Master BI - Business Analytics (Albert Campano)"
 date: "Noviembre del 2019"
 output:
   html_document:
@@ -440,9 +440,9 @@ wss <- kmeans(clus_norm,centers=1)$tot.withinss
 plot(1:10, wss, type="l", xlab="Número de grupos",ylab="Sumas de cuadrados dentro de cada grupo (conjunto)")
 ```
 
-En kmeans, la suma de cuadrados '$tot.withinss' debe ser minima. Pero tambien debemos considerar tener un numero de clusters adecuados (no muy grande).
+En kmeans, la suma de cuadrados '$tot.withinss' debe ser mínima. Pero también debemos considerar tener un número de clusters adecuados (no muy grande).
 
-Se pueden usar varios criterios para definir que numero de clusters cojemos, uno de los mas famosos es el criterio del codo (https://en.wikipedia.org/wiki/Elbow_method_(clustering)). Usaremos mas grupos para ver mejor el "codo".
+Se pueden usar varios criterios para definir que numero de clusters cogemos, uno de los más famosos es el criterio del codo (https://en.wikipedia.org/wiki/Elbow_method_(clustering)). Usaremos más grupos para ver mejor el "codo".
 
 ```{r,eval=TRUE,echo=TRUE,warning=FALSE, message=FALSE}
 set.seed(123)
@@ -473,12 +473,12 @@ clus_kmeans7$clusterKmeans= Modelo7$cluster
 aggregate(.~clusterKmeans,FUN=mean, data=clus_kmeans7)
 ```
 
-El grupo 1 esta formado por los asegurados más fieles (más años en la compañia).
-El grupo 2 esta formado por los conductores más antiguos (más años con el permiso).
-El grupo 3 esta formado por la mayoria de siniestrados.
-El grupo 4 tiene caracteristicas de los grupos 1, 2, 3 y 5.
-El grupo 5 esta formado por los que tienen un vehiculo antiguo.
-El grupo 7 esta formado por los asegurados mas jovenes.
+El grupo 1 está formado por los asegurados más fieles (más años en la compañía).
+El grupo 2 está formado por los conductores más antiguos (más años con el permiso).
+El grupo 3 está formado por la mayoría de siniestrados.
+El grupo 4 tiene características de los grupos 1, 2, 3 y 5.
+El grupo 5 está formado por los que tienen un vehículo antiguo.
+El grupo 7 está formado por los asegurados más jóvenes.
 
 ******
 ## Ejercicio 3
@@ -489,7 +489,7 @@ El grupo 7 esta formado por los asegurados mas jovenes.
 ## Respuesta 3
 ******
 
-En el algoritmo jerarquico se empieza con todos los datos y se van agrupando siguiendo una metrica de distancia. Siempre da el mismo resultado. Por otro lado, kmeans empieza eligiendo k centroides de forma aleatoria por eso necesitamos 'set.seed()' para poder reproducir los mismos resultados.
+En el algoritmo jerárquico se empieza con todos los datos y se van agrupando siguiendo una métrica de distancia. Siempre da el mismo resultado. Por otro lado, kmeans empieza eligiendo k centroides de forma aleatoria por eso necesitamos 'set.seed()' para poder reproducir los mismos resultados.
 
 
 ```{r,eval=TRUE,echo=TRUE,warning=FALSE, message=FALSE}
@@ -508,7 +508,7 @@ clus_jerarquico456$clusterJerar= cutree(clus_norm_Jerarquico456, k = 7)
 table(clus_jerarquico456$clusterJerar)
 ```
 
-Se puede comprobar que los valores de kmeans son iguales aunque cambiemos la 'semilla'.
+Se puede comprobar que los valores de kmeans son iguales, aunque cambiemos la 'semilla'.
 
 ```{r,eval=TRUE,echo=TRUE,warning=FALSE, message=FALSE}
 set.seed(456)
@@ -525,7 +525,7 @@ modelo_k7$betweenss
 ```
 
 Se puede comprobar que los valores de kmeans son distintos cuando cambiamos la 'semilla'.
-Como curiosidad, la suma de cuadrados totales (totss) es igual en los dos 'semillas' por que el algoritmo hace iteraciones sobre los datos hasta que no puede mejorar la variable 'totss', lo que significa que para esas dos semillas convergen en soluciones "iguales". 
+Como curiosidad, la suma de cuadrados totales (totss) es igual en los dos 'semillas' porque el algoritmo hace iteraciones sobre los datos hasta que no puede mejorar la variable 'totss', lo que significa que para esas dos semillas convergen en soluciones "iguales". 
 Hablamos de una solución 'local' ya que es la mejor que hemos podido encontrar con la disposición inicial de los centroides. 
 
 ******
@@ -536,8 +536,6 @@ En el apartado de *_representación gráfica de variables por cluster_* del algo
 ******
 ## Respuesta 4
 ******
-
-Escriba su respuesta aquí
 
 ```{r,eval=TRUE,echo=TRUE,warning=FALSE, message=FALSE}
 plot(clus_jerarquico[c("ant_veh","edad")], xlab="Antiguedad del vehicul", ylab="Edad",col=clus_jerarquico$clusterJerar) 
@@ -560,7 +558,7 @@ barplot(prop.table(table(Cartera$gdi,Cartera$sin)),col=c("darkblue","red"))
 legend(5,0.8,c("Contratada","No contratada"),fill = c("darkblue","red"))
 ```
 
-No parace haber una relación clara entre el numero de siniestros y la contratación de la garantia de daños propios. Para los siniestros con suficientes datos (0 - 3) la proporcion de contratado / no contratado es de aproximadamente el 70%, por tanto, las variables son independientes.
+No parece haber una relación clara entre el número de siniestros y la contratación de la garantía de daños propios. Para los siniestros con suficientes datos (0 - 3) la proporción de contratado / no contratado es de aproximadamente el 70%, por tanto, las variables son independientes.
 
 ******
 ## Ejercicio 6
@@ -602,7 +600,7 @@ clus_kmeans6$clusterKmeans= Modelo6$cluster
 aggregate(.~clusterKmeans,FUN=mean, data=clus_kmeans6)
 ```
 
-Para numeros cercanos a 1, hay más datos con factor 'No urbano'. Para numeros cercanos a 2, hay más datos con factor 'Urbano'
+Para numeros cercanos a 1, hay más datos con factor 'No urbano'. Para numeros cercanos a 2, hay más datos con factor 'Urbano'.
 
 ******
 ## Ejercicio 7
@@ -612,8 +610,6 @@ En el apartado de asignación de clusters del algorimto kmeans se ha asignado a 
 ******
 ## Respuesta 7
 ******
-
-Escriba su respuesta aquí
 
 ```{r,eval=TRUE,echo=TRUE,warning=FALSE, message=FALSE}
 NumCluster=5
