--- a/B0.477-20191-PEC03/B0.477-20191-PEC3-Algoritmos-de-Clasificacion-Solución.Rmd
+++ b/B0.477-20191-PEC03/B0.477-20191-PEC3-Algoritmos-de-Clasificacion-Solución.Rmd
@@ -1,6 +1,6 @@
 ---
 title: 'Algoritmos de clasificación: SVM, Árboles de decisión simples y múltiples (random forest)'
-author: "UOC - Master BI - Business Analytics (Nombre Estudiante)"
+author: "UOC - Master BI - Business Analytics (Albert Campano)"
 date: "Diciembre del 2019"
 output:
   html_document:
@@ -15,6 +15,8 @@ output:
     highlight: zenburn
     toc: yes
   word_document: default
+editor_options: 
+  chunk_output_type: console
 ---
 
 ```{r setup, include=FALSE}
@@ -183,6 +185,7 @@ library("useful")
 library("randomForest")
 
 # Cargamos el fichero de datos que utilizamos para desarrollar la PEC
+setwd("C:/Users/03743985/Documents/Repositorios_git/UOC_Fundamentos_Data_Science/B0.477-20191-PEC03")
 nombreruta_PEC <- paste(getwd(),"/PEC3.csv", sep = "")
 Data_PEC <- read.csv(nombreruta_PEC, encoding="UTF-8",
                       header=TRUE, sep=",", na.strings="NA", dec=".", strip.white=TRUE)
