--- a/B0.477-20191-PEC03/B0.477-20191-PEC3-Algoritmos-de-Clasificacion-Enunciado.Rmd
+++ b/B0.477-20191-PEC03/B0.477-20191-PEC3-Algoritmos-de-Clasificacion-Enunciado.Rmd
@@ -617,11 +617,20 @@ En el gráfico f10 mostramos la relación entre las variables Visitas, KM e Ingr
 
 ## Respuesta 5
 
-Escriba su respuesta aquí
+```{r}
+grp <- (preds_svm == testData$Comercial)
+```
+
+```{r}
+plot51 <- ggplot(testData, aes(x=Km, y=Margen, color=Comercial)) + geom_point(aes(shape=factor(grp), size=1))
+plot51
+```
 
 ```{r,eval=TRUE,echo=TRUE,warning=FALSE, message=FALSE}
-#Escriba su código aquí
+plot52 <- ggplot(testData, aes(x=Km, y=Margen, color=preds_svm)) + geom_point(aes(shape=factor(grp), size=1))
+plot52
 ```
+
 
 ## Pregunta 6
 Calcula una predicción de clasificación utilizando el algoritmo KNN con k=3. Compare los resultados con los obtenidos utilizando el modelo model_svm. Para poder reproducir los resultados, utilice la semilla 1234 antes de entrenar el modelo knn. Nombrar 'preds_knn' a la variable que contiene las predicciones del modelo knn para poder utilizarlo en el ejercicio siguiente.
